force-app/main/default/objects/Facility_Fee__x/Facility_Fee__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>FacilityFee</externalName>
    <label>Facility Fee</label>
    <pluralLabel>Facility Fees</pluralLabel>
</CustomObject>