force-app/main/default/objects/Facility_Fee__x/fields/Facility_Limit_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Facility_Limit_Fee_Amount__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Facility Limit Fee Amount</description>
    <externalDeveloperName>FacilityLimitFeeAmount</externalDeveloperName>
    <label>Fee Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>