force-app/main/default/objects/Facility_Fee__x/fields/Facility_Limit_Fee_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Facility_Limit_Fee_Frequency__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Facility Limit Fee Frequency</description>
    <externalDeveloperName>Frequency</externalDeveloperName>
    <label>Fee Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>