force-app/main/default/objects/Facility_Fee__x/fields/Indemnity_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Guarantee__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Id of Indemnity Guarantee</description>
    <externalDeveloperName>IndemnityGuaranteeId</externalDeveloperName>
    <label>Indemnity Guarantee</label>
    <length>18</length>
    <referenceTo>Indemnity_Guarantee__x</referenceTo>
    <relationshipLabel>Facility Fees</relationshipLabel>
    <relationshipName>Facility_Fees</relationshipName>
    <type>ExternalLookup</type>
</CustomField>