force-app/main/default/objects/Facility_Fee__x/fields/Next_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Due_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Next Due Date</description>
    <externalDeveloperName>NextDueDate</externalDeveloperName>
    <label>Next Due Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>